# signalbridge-controller

./: .cppcheck_config  .cppcheck_suppressions  .cppcheck_suppressions.txt  .gitignore  .gitmodules  .tool-versions  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CPPCHECK_SETUP.md  DEVCONTAINER_FIX.md  OUTPUT.md  PROMPT.md  README.md  compile_commands.json  dependencies.json  export.sh  misra.json  misra.txt  sonar-project.properties  uncrustify.cfg
.devcontainer/: Dockerfile  README.md  dependencies.json  dependencies.json.backup.1756290565  devcontainer.json  install_misra_addon.sh  post-create.sh  update-dependencies.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: buil-dev-image.yml  build-all.yml  build.yml  update-dependencies.sh  update-dependencies.yml
docs/: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  COMMANDS.md  CPPCHECK_SETUP.md  Doxyfile  OUTPUT.md  PERFORMANCE.md  PROMPT.md  README.md  SIGNALBRIDGE_HOST_LIB_SPEC.md  mainpage.dox
include/: CMakeLists.txt  FreeRTOSConfig.h  app_comm.h  app_config.h  app_context.h  app_inputs.h  app_outputs.h  app_setup.h  app_tasks.h  cobs.h  commands.h  data_event.h  encoded_framer.h  error_management.h  hooks.h  inputs.h  main.h  outputs.h  stdA320.h  task_props.h  tm1637.h  tm1639.h  tusb_config.h
scripts/: analyze_memory.sh  check_placement.py  cppcheck_simple.sh  memory_analysis.sh  run_cppcheck.sh  test_misra_addon.sh
src/: CMakeLists.txt  app_comm.c  app_context.c  app_inputs.c  app_outputs.c  app_setup.c  app_tasks.c  cobs.c  encoded_framer.c  error_management.c  hooks.c  hooks.h  inputs.c  main.c  main.h  outputs.c  tm1637.c  tm1639.c  usb_descriptors.c
src/FreeRTOS/: FreeRTOSConfig.h
src/lib/: CMakeLists.txt  data_event.h  inputs.c  inputs.h  keypad.c  keypad.h  led.c  led.h  outputs.c  outputs.h
test/: CMakeLists.txt  FreeRTOSConfig.h  README.md
test/cmake/: GenerateCoverage.cmake
test/unit/: CMakeLists.txt  hardware_mocks.c  test_app_comm.c  test_cobs.c  test_cobs_example.c  test_cobs_standalone.c  test_encoded_framer.c  test_error_management.c  test_error_management_example.c  test_inputs.c  test_outputs.c  test_tm1637.c  test_tm1639.c
test/unit/mock_headers/: FreeRTOS.h.backup  queue.h.backup  semphr.h  task.h.backup
test/unit/mock_headers/hardware/: adc.h  clocks.h  gpio.h  pio.h  pwm.h  spi.h  watchdog.h
test/unit/mock_headers/pico/: binary_info.h  stdlib.h  time.h
